tests/samples/compile_errors/date_literal/invalid_date.bas
Attribute VB_Name = "BadDateLiteral"
Sub TestDate()
    Dim d As Date
    d = #2025-13-45#  ' month 13, day 45 — invalid
End Sub
